src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>This should be a formula field and calculate age from DateOfBirth field.</description>
        <formula>FLOOR((TODAY() - DOB__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma Separated Values</fullName>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                    <label>1st of the Month</label>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BookingDate__c</fullName>
        <label>BookingDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CombinedEmail__c</fullName>
        <formula>PersonEmail+&apos; &apos;+ Email2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CombinedPhone__c</fullName>
        <formula>PersonMobilePhone+&apos; &apos;+PersonHomePhone+&apos; &apos;+PersonOtherPhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Method__c</fullName>
        <label>Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merge_Interes</fullName>
                </value>
                <value>
                    <fullName>Interest_datafix</fullName>
                </value>
                <value>
                    <fullName>SF_Interest</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Date of Birth</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoNotEmailStudentEmail2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will store if customer opts out of receiving emails on email2 address</description>
        <label>DoNotEmailStudentEmail2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will store if customer opts out of receiving emails on there primary email address</description>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotMail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if no mail should be sent to customer</description>
        <label>DoNotMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if no SMS should be sent</description>
        <label>DoNotSMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSendNewsLetters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if customer does not want to receive newsletters</description>
        <label>Do Not Send News Letters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSendPromoEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to store if customer does not want to receive promotional emails</description>
        <label>Do Not Send Promo Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoubleOptInTimeStamp__c</fullName>
        <label>DoubleOptInTimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DoubleOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoubleOptIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>this field is for the secondary email and replacing student email 2 field</description>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will store if customer opts out of receiving emails on email2 address</description>
        <label>Email2 opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasAddress__c</fullName>
        <formula>!( 
ISBLANK(PersonMailingCountry) &amp;&amp; ISBLANK(PersonMailingCity) &amp;&amp; ISBLANK(PersonMailingStreet) &amp;&amp; ISBLANK(PersonMailingState) &amp;&amp; ISBLANK(PersonMailingPostalCode) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasBooking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasBooking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasPhoneNumber__c</fullName>
        <formula>!( 
ISBLANK(PersonOtherPhone) &amp;&amp; ISBLANK( PersonMobilePhone) &amp;&amp; ISBLANK(Phone) &amp;&amp; ISBLANK(PersonHomePhone) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasPhoneNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Email2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If student email2 is invalid</description>
        <label>Invalid Email2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If primary email is invalid</description>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAmbassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAmbassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProtectedIdentity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If customer has opted in for protect information, if this is true then we should not share contact details of this customer</description>
        <label>IsProtectedIdentity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MainLanguage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Customers Nationality</description>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Nationality1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode</description>
        <inlineHelpText>PostalCode</inlineHelpText>
        <label>PostalCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <inlineHelpText>Region</inlineHelpText>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_picklsit__c</fullName>
        <label>Test 2000  picklist entry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triton_Id__c</fullName>
        <description>Triton Id</description>
        <inlineHelpText>Triton Id</inlineHelpText>
        <label>Triton Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <description>Company</description>
        <label>Company</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>